<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

	android:id="@+id/ll_main3"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:orientation="vertical"
	    >
		<View
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="5"
		/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/tv_revision"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:gravity="left|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginLeft="@dimen/size_text_medium"
				android:text="@string/babycare_revision"
				/>
			<TextView
				android:id="@+id/tv_revision_value"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:gravity="right|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginRight="@dimen/size_text_medium"
				android:text="@string/babycare_revision_value"
				/>
		</LinearLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="10"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/tv_company"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="left|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginLeft="@dimen/size_text_medium"
				android:text="@string/babycare_company"
				/>
			<TextView
				android:id="@+id/tv_company_value"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="right|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_medium"
				android:layout_marginRight="@dimen/size_text_medium"
				android:text="@string/babycare_company_value"
				/>
		</LinearLayout>


		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="10"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/tv_contactus"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:gravity="left|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginLeft="@dimen/size_text_medium"
				android:text="@string/babycare_contactus"
				/>
			<TextView
				android:id="@+id/tv_contactus_value"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:gravity="right|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_medium"
				android:layout_marginRight="@dimen/size_text_medium"
				android:text="@string/babycare_contactus_value"
				/>
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="10"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/tv_ucla"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="9"
				android:gravity="left|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginLeft="@dimen/size_text_medium"
				android:text="@string/ula_title"
				/>
			<Button
				android:id="@+id/btn_ula"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="right|center_vertical"
				android:layout_marginRight="@dimen/size_text_medium"
				/>
		</LinearLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="10"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/tv_privacy"
				android:layout_height="match_parent"
				android:layout_width="0dp"
				android:layout_weight="9"
				android:gravity="left|center_vertical"
				android:textColor="@android:color/black"
				android:textSize="@dimen/size_text_large"
				android:layout_marginLeft="@dimen/size_text_medium"
				android:text="@string/privacy_title"
				/>
			<Button
				android:id="@+id/btn_privacy"
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:gravity="right|center_vertical"
				android:layout_marginRight="@dimen/size_text_medium"
				/>
		</LinearLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="15"
			/>
		<FrameLayout
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="60"
			android:background="@null"
			android:layout_gravity="center_horizontal"
			>
			<ImageView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_marginBottom="@dimen/size_text_small"
				android:layout_marginTop="@dimen/size_text_tiny"
				/>
		</FrameLayout>
		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="3"
			/>
		<TextView
			android:id="@+id/tv_myname"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="5"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:textSize="@dimen/size_text_large"
			/>
		<View
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="3"
			/>
	</LinearLayout>    
</LinearLayout>
